--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,7 @@
 	 
 <%= link_to image_tag("rails.png", alt: "Rails logo", size:"100"), 'http://rubyonrails.org/' %>
 <%= image_tag asset_path("rails.png") %>
-<img src="home_image.png"/>
+<img src="home_page.png"/>
 
 <% content_for :desc do %>
 <p>Come work your body from monday to Saturday in our center opened 24h/24h</p>
