--- a/app/views/classes/index.html.erb
+++ b/app/views/classes/index.html.erb
@@ -1,6 +1,23 @@
 <% provide(:title, "classes") %>
 <% content_for :head do %>
-<h1>Listing classes</h1>
+<h1>
+    <% if @page%>
+    <%= @page[:title]%>
+    <%end%>
+</h1>
+<%end%>
+
+<% content_for :img do %>
+    <% if @img %>
+    <% carousel_for(@img) %>
+    <%end%>
+<%end%>
+
+<% content_for :description do %>
+
+    <% if @page %>
+    <%= @page[:description] %>
+    <%end%>
 <%end%>
 
 <% content_for :cont do %>
@@ -9,7 +26,7 @@
 <%if !@empty %>
 <% @days.each do |d| %>
 <%if d[3] > 0%>
-<table class="table_product">
+<table class="table">
   <caption><%= d[0]%> <%=d[1] %>/<%= d[2] %></caption>
   <tr>
         <th>Time</th>
