--- a/app/views/contact_messages/index.html.erb
+++ b/app/views/contact_messages/index.html.erb
@@ -1,10 +1,26 @@
 <% provide(:title, "message list") %>
 <% content_for  :head do%>
-<h1>Listing messages</h1>
+<h1>
+  <% if @page %>
+  <% @page[:title]%>
+  <%end%>
+</h1>
+<%end%>
+
+<% content_for :desc do %>
+  <%if @page%>
+  <% @page[:description] %>
+  <%end%>
+<%end%>
+
+<% content_for :img do %>
+  <% if @img %>
+  <%= carousel_for(@img)%>
+  <%end%>
 <%end%>
 
 <%content_for :cont do %>
-<table>
+<table class="table">
   <tr>
   </tr>
 
