--- a/app/views/layouts/_content.html.erb
+++ b/app/views/layouts/_content.html.erb
@@ -1,10 +1,43 @@
 <div class="center jumbotron">
 <%= yield :head %>
+    <%= yield :desc %>
 <!--		<h1>@content.title</h1>
 -->
+<!--<div>-->
+<%= yield :img %> 
+<!--</div>-->
+
 </div>
 <center>
-<%= yield :images %>
-<%= yield :desc %>
+<!--</div>-->
+<!--<center>-->
+<!--<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">-->
+<!--   Indicators -->
+<!--  <ol class="carousel-indicators">-->
+<!--    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>-->
+<!--    <li data-target="#carousel-example-generic" data-slide-to="1"></li>-->
+<!--  </ol>-->
+
+<!--  Wrapper for slides -->
+<!--  <div class="carousel-inner">-->
+<!--    <div class="item active">-->
+<!--      <img src="..." alt="...">-->
+<!--    </div>-->
+<!--    <div class="item">-->
+<!--      <img src="..." alt="...">-->
+<!--    </div>-->
+<!--    ...-->
+<!--  </div>-->
+
+<!--  Controls -->
+<!--  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">-->
+<!--    <span class="glyphicon glyphicon-chevron-left"></span>-->
+<!--  </a>-->
+<!--  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">-->
+<!--    <span class="glyphicon glyphicon-chevron-right"></span>-->
+<!--  </a>-->
+<!--</div>-->
+
+
 <%= yield :cont %>
 </center>
