--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
     </small>
     <nav>
         <ul>
-            <li><%= link_to "Contact", '#' %></li>
+            <li><%= link_to "Contact", contact_messages_path %></li>
         </ul>
     </nav>
 </footer>
