--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -1,12 +1,29 @@
 <% provide(:title, 'Memberships') %> 
 <% content_for :head do%>
-<h1>Memberships</h1>
+<h1>
+    <% if @page%>
+    <%= @page[:title]%>
+    <%end%>
+</h1>
 <%end%>
+
 <% content_for :desc do %>
-<p>Below the list of all the memberships available in our fitness center</p>
+<p>
+    <% if @page%>
+    <%= @page[:description]%>
+    <%end%>  
+</p>
 <%end%>
+
+<% content_for :img do %>
+    <% if @img%>
+    <%= carousel_for(@img)%>
+    <%end%>
+<%end%>
+
+
 <% content_for :cont do %>
-<table class="table_product">
+<table class="table">
   <tr>
     <th>Type</th>
     <th>Price</th>
@@ -33,8 +50,10 @@
 </table>
 
 <br />
-
 <% if logged_in? %>
     <%= link_to 'Add a membership', :action => 'new' %>
 <% end %>
 <%end%>
+
+
+ 
