--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,11 +12,21 @@
 				<li><%= link_to "Classes", classes_path %></li>
 				<li><%= link_to "Contact", contact_messages_path %></li>
 				<% if logged_in? %>
-				    <% if current_admin.admin_all %>
-    				    <li><%= link_to "Images", images_path %></li>
-    				    <li><%= link_to "Bookings", bookings_path %></li>
+				<% print "hello" %>
+				    <% if website_admin? %>
+					    <!--<li class="dropdown">-->
+		       <!--             <a href="#" class="dropdown-toggle" data toggle="dropdown">-->
+		       <!--                 Admin <b class="caret"></b>-->
+		       <!--             </a>-->
+			      <!--          <ul class="dropdown-menu">-->
+		    				    <li><%= link_to "Images", images_path %></li>
+		    				    <li><%= link_to "Bookings", bookings_path %></li>
+		                        <li class="divider"></li>
+		    				    <li><%= link_to "New page", new_page_path %></li>
+		                <!--    </ul>-->
+		                <!--</li>-->
     				<% end %>
-    				<li><%= link_to "Log out", logout_path, method: "delete" %></li>
+    				<li><%= link_to "Log out", logout_path, method: :delete %></li>
 				<% else %>
 				    <li><%= link_to "Log in as instructor", login_path %></li>
 				<% end %>
