--- a/app/views/contact_messages/new.html.erb
+++ b/app/views/contact_messages/new.html.erb
@@ -1,9 +1,25 @@
 <% provide(:title, 'contact')%>
-<% content_for :head do %>
-<h1>New message</h1>
+<% content_for :head do%>
+<h1>
+  <% if @page %>
+  <% @page[:title]%>
+  <%end%>
+</h1>
 <%end%>
 
-<% content_for :cont do %>
+<% content_for :desc do %>
+  <%if @page%>
+  <% @page[:description] %>
+  <%end%>
+<%end%>
+
+<% content_for :img do %>
+  <% if @img %>
+  <%= carousel_for(@img)%>
+  <%end%>
+<%end%>
+
+<%content_for :cont do %>
 
 <%= form_for(@contact_message, :url => {:action => 'create'}) do |f| %>
  <p>
