--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -13,7 +13,7 @@
     <th>Phone</th>
     <th>Email</th>
     <th>Membership ID</th>
-    <%if logged_in? %>
+    <%if website_admin? %>
       <th>Edit</th>
       <th>Delete</th>
     <%end%>
