--- a/app/views/classes/index.html.erb
+++ b/app/views/classes/index.html.erb
@@ -34,7 +34,7 @@
     <th>Description</th>
     <th>Start date</th>
 
-    <%if logged_in? %>
+    <%if website_admin? %>
     <th>Edit</th>
     <th>Delete</th>
     <%end%>
