--- a/app/views/classes/show.html.erb
+++ b/app/views/classes/show.html.erb
@@ -12,9 +12,9 @@
 
 <p>When?: <i><%= @classe.date.to_time.strftime('%A, %d %b %Y %l:%M %p') %></i></p>
 
-<p><%= link_to 'Book it', new_booking_path(@classe.id) %></p>
+<p><%= link_to 'Book it', new_booking_path(@classe.id), class: "btn btn-primary"  %></p>
 
-<% if logged_in? %>
+<% if website_admin? %>
     <%= link_to 'Edit', :action => 'edit', :id => @classe.id %> |
 <% end %>
 <%= link_to 'Back', :action => nil %>
