--- a/app/views/classes/show.html.erb
+++ b/app/views/classes/show.html.erb
@@ -13,12 +13,15 @@
 <p>When?: <i><%= @classe.date.to_time.strftime('%A, %d %b %Y %l:%M %p') %></i></p>
 
 <p>
-    <% if @classe.first_classeId != -1 %>
-        <%= link_to 'Book SET of 6 classes', new_booking_path(@classe.id), class: "btn btn-primary"  %>
-    <% else %>
-        <%= link_to 'Book it', new_booking_path(@classe.id), class: "btn btn-primary"  %>
+    <% tnow = Time.now %>
+    <% if @classe.first_classeId != -1 && if get_start_date(@classe.first_classeId) > tnow %>
+            <%= link_to 'Book SET of 6 classes', new_booking_path(@classe.id), class: "btn btn-primary"  %>
+    <% else if @classe.date > tnow %>
+            <%= link_to 'Book it', new_booking_path(@classe.id), class: "btn btn-primary"  %>
     <% end %>
 </p>
+<%end%>
+<%end%>
 
 <% if website_admin? %>
     <%= link_to 'Edit', :action => 'edit', :id => @classe.id %> |
