--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,6 +22,7 @@
 		    				    <li><%= link_to "Bookings", bookings_path %></li>
 		                        <li class="divider"></li>
 		    				    <li><%= link_to "New page", new_page_path %></li>
+		    				    <li><%= link_to "Edit pages", static_pages_path %></li>
 		                <!--    </ul>-->
 		                <!--</li>-->
     				<% end %>
