--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -6,13 +6,13 @@
 <% content_for :cont do %>
 <%= form_for(@page, :url => {:action => 'create'}) do |f| %>
    <p>
-    Title: <%= f.text_field 'title' %>
+    Title: <%= f.text_field 'title', :placeholder => "between 2 and  15 characters" %>
   </p>
   <p>
-    Description: <%= f.text_field 'description' %>
+    Description: <%= f.text_field 'description', :placeholder => "between 5 and 30 characters" %>
   </p>
   <p>
-    Content: <%= f.text_area 'content' %>
+    Content: <%= f.text_area 'content',  :placeholder => "5 characters long minimum"%>
   </p>
   <p>
     <%= f.submit "Create", class: "btn btn-primary" %>
