--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -10,10 +10,10 @@
     on  <%= @booking.cdate.strftime('%A %d %B at %H:%M') %>
   </p>
   <p>
-    Name: <%= f.text_field 'name' %>
+    Name: <%= f.text_field 'name', :placeholder => "minimum length of 2 characters" %>
   </p>
   <p>
-    Phone number: <%= f.telephone_field(:phone) %>
+    Phone number: <%= f.telephone_field(:phone), :placeholder => "must contain between 10 and 15 characters" %>
   </p>
   <p>
     Email Address: <%= f.email_field(:email) %>
