--- a/app/views/admins/new.html.erb
+++ b/app/views/admins/new.html.erb
@@ -7,10 +7,10 @@
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
         <%= form_for(@admin) do |f| %>
-            <%= f.label :name %>
+            <%= f.label :name , :placeholder => "minimum length of 30 characters"%>
             <%= f.text_field :name %>
             
-            <%= f.label :password %>
+            <%= f.label :password, :placeholder => "minumun length of 5"%>
             <%= f.password_field :password %>
             
             <%= f.label :password_confirmation, "Confirmation" %>
