--- a/app/views/classes/edit.html.erb
+++ b/app/views/classes/edit.html.erb
@@ -6,7 +6,7 @@
 <% content_for :cont do %>
 <%= form_for(@classe, :url => {:action => 'update', :id => @classe.id}) do |f| %>
   <p>
-    Classe: <%= f.text_field 'ctype' %>
+    Classe: <%= f.text_field 'ctype' , :placeholder => "minimum length of 2 characters" %>
   </p>
   <p>
     Starting (first classe of severals): <%= f.check_box 'start' %>
@@ -15,7 +15,7 @@
     Date: <%= f.datetime_select :date %>
   </p>
   <p>
-    Description: <%= f.text_area 'description' %>
+    Description: <%= f.text_area 'description',:placeholder => "must contain between 5 and 200 characters" %>
   </p>
   <p>
     Instructor:
