--- a/app/views/contact_messages/new.html.erb
+++ b/app/views/contact_messages/new.html.erb
@@ -23,10 +23,10 @@
 
 <%= form_for(@contact_message, :url => {:action => 'create'}) do |f| %>
  <p>
-    Name: <%= f.text_field(:name) %>
+    Name: <%= f.text_field(:name , :placeholder => "minimum length of 2 characters") %>
   </p>
   <p>
-    Phone number: <%= f.telephone_field(:phone) %>
+    Phone number: <%= f.telephone_field(:phone, :placeholder => "must contain between 10 and 15 characters") %>
   </p>
   <p>
     Email Address: <%= f.email_field(:email) %>
