--- a/app/views/classes/show.html.erb
+++ b/app/views/classes/show.html.erb
@@ -14,16 +14,18 @@
 
 <p>
     <% tnow = Time.now %>
-    <%= tnow %>
-    <%= @classe.date %>
+    <br/>
     <% if @classe.first_classeId && @classe.first_classeId != -1 &&
-                            if get_start_date(@classe.first_classeId) > tnow %>
+                        get_start_date(@classe.first_classeId) > tnow %>
+                
             <%= link_to 'Book SET of 6 classes', new_booking_path(@classe.id), class: "btn btn-primary"  %>
     <% else if @classe.date > tnow %>
             <%= link_to 'Book it', new_booking_path(@classe.id), class: "btn btn-primary"  %>
+    <% else %>
+        First class is already passed.
     <% end %>
 </p>
-<%end%>
+<br/>
 <%end%>
 
 <% if website_admin? %>
