--- a/app/views/admins/new.html.erb
+++ b/app/views/admins/new.html.erb
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
         <%= form_for(@admin) do |f| %>
-            <%= f.label :name , :placeholder => "minimum length of 30 characters"%>
+            <%= f.label :name , :placeholder => "maximum length of 30 characters"%>
             <%= f.text_field :name %>
             
             <%= f.label :password, :placeholder => "minumun length of 5"%>
