--- a/app/views/classes/index.html.erb
+++ b/app/views/classes/index.html.erb
@@ -13,7 +13,7 @@
     <%end%>
 <%end%>
 
-<% content_for :description do %>
+<% content_for :desc do %>
 
     <% if @page %>
     <%= @page[:description] %>
