--- a/app/views/contact_messages/new.html.erb
+++ b/app/views/contact_messages/new.html.erb
@@ -1,16 +1,18 @@
 <% provide(:title, 'contact')%>
 <% content_for :head do%>
 <h1>
-  <% if @page %>
-  <% @page[:title]%>
-  <%end%>
+    <% if @page%>
+    <%= @page[:title]%>
+    <%end%>
 </h1>
 <%end%>
 
 <% content_for :desc do %>
+<p>
   <%if @page%>
-  <% @page[:description] %>
+  <%= @page[:description] %>
   <%end%>
+  </p>
 <%end%>
 
 <% content_for :img do %>
